Refactoring JS: $$(..).each(e) { e.f() } => $$(..).invoke('f')

--- a/app/views/task_lists/index.html.haml
+++ b/app/views/task_lists/index.html.haml
@@ -34,4 +34,4 @@
     = instructions_for_calendars
     = print_task_lists_link
 
-    = javascript_tag "$('filter_assigned').value = '#{escape_javascript(value_for_assigned_to_select)}'; Filter.updateFilters()"
+    = javascript_tag "$('filter_assigned').value = '#{escape_javascript(value_for_assigned_to_select)}'"
