Avoid long task names breaking layout

--- a/app/styles/_tasks.sass
+++ b/app/styles/_tasks.sass
@@ -74,6 +74,7 @@ form.new_task, form.edit_task, .task_list_form
     border: none
     margin: 0px
       bottom: 3px
+    overflow-x: hidden
   .text_actions
     float: right
     font-size: 12px
