--- a/app/styles/_threads.sass
+++ b/app/styles/_threads.sass
@@ -23,6 +23,7 @@
       color: #9da3a7
     p.thread_title
       margin-bottom: 0
+      overflow-x: hidden
       a
         padding-left: 20px
         font-weight: bold
