--- a/app/styles/_tooltips.sass
+++ b/app/styles/_tooltips.sass
@@ -34,6 +34,7 @@
     +rounded(5px)
     +box-shadow(#EEE 3px 3px 3px)
     font-size: 12px
+    overflow-x: hidden
     p
       margin: 10px 0
     a
