Use original images in page uploads, caption below

--- a/app/styles/_pages.sass
+++ b/app/styles/_pages.sass
@@ -307,6 +307,20 @@ form.new_note, form.edit_note
     div.reference
       .date
         float: none
+  .upload.image
+    div.thumb
+      overflow: hidden
+      float: left
+      width: 600px
+      text-align: center
+      margin-left: 15px
+      margin-right: 8px
+      img
+        max-width: 600px
+    div.block
+      width: 600px
+      text-align: center
+    
 
 .index_pages
   h4
