Spacing and compacting images inside Pages

--- a/app/styles/_pages.sass
+++ b/app/styles/_pages.sass
@@ -308,19 +308,18 @@ form.new_note, form.edit_note
       .date
         float: none
   .upload.image
-    div.thumb
+    .thumb
       overflow: hidden
       float: left
-      width: 600px
-      text-align: center
+      width: 580px
       margin-left: 15px
       margin-right: 8px
       img
         max-width: 600px
-    div.block
-      width: 600px
-      text-align: center
-    
+    .block
+      margin-left: 15px
+      .date
+        display: inline
 
 .index_pages
   h4
