--- a/app/views/uploads/_upload_slot.haml
+++ b/app/views/uploads/_upload_slot.haml
@@ -13,7 +13,7 @@
         .file
           = link_to_upload(upload_slot, upload_slot.file_name)
           == (#{number_to_human_size(upload_slot.size)})
-        - if upload_slot.description
+        - unless upload_slot.description.blank?
           .description
             =h upload_slot.description
         .reference
