A bit of spacing for the text under an image in a page

--- a/app/styles/_pages.sass
+++ b/app/styles/_pages.sass
@@ -317,6 +317,7 @@ form.new_note, form.edit_note
       img
         max-width: 600px
     .block
+      margin-top: 10px
       margin-left: 15px
       .date
         display: inline
