--- a/app/views/tasks/_form.haml
+++ b/app/views/tasks/_form.haml
@@ -1,8 +1,10 @@
 - shown = %w[new edit].include?(action_name)
+- task_action = task.new_record?? :new : :edit
+- i18n_scope = [:tasks, task_action]
 
-- form_for [project, task_list, task], :html => { :class => "app_form #{task.new_record?? 'new' : 'edit'}_task", :style => shown ? nil : 'display:none', :'data-remote' => !shown || nil } do |form|
+- form_for [project, task_list, task], :html => { :class => "app_form #{task_action}_task", :style => shown ? nil : 'display:none', :'data-remote' => !shown || nil } do |form|
   = render 'tasks/fields', :f => form, :project => project
   .submit
     - unless shown
       = link_to t('common.cancel'), '#cancel'
-    = form.submit t("tasks.#{form.object.new_record?? 'new' : 'edit'}.submit")
+    = form.submit t(:submit, :scope => i18n_scope), :'data-disable-with' => t(:sending, :scope => i18n_scope)
