--- a/app/views/tasks/new.haml
+++ b/app/views/tasks/new.haml
@@ -5,4 +5,4 @@
 
 - form_for [@current_project,@task_list,@task], :html => {:class => 'app_form'} do |f|
   = task_fields(f,@current_project,@task_list,@task)
-  = f.submit t('.submit')
+  = f.submit t('.submit'), :'data-disable-with' => t('.sending')
