Added settings field to Organization.
Added working UI for managing org site colour settings (header bar/links).
Added colorPicker widget. Changed navigation partial to haml and extracted
tabnav code to render_navigation helper

--- a/app/views/layouts/application.m.haml
+++ b/app/views/layouts/application.m.haml
@@ -5,6 +5,7 @@
   %meta{ :name => 'viewport', :content => 'width=320; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;' }
   = csrf_meta_tag
   = stylesheet_link_tag 'mobile', :media => :all
+  = organization_link_colour
 
 %body{ :class => "#{location_name} #{I18n.locale} #{Rails.env}"}
   #header
