tasks: consolidate status/assigned user transitions
After the big comments & tasks refactoring, status changes are
independent of assigned user. This is now obvious in the UI too.
The only way that an assigned user can affect task status is that
it transitions from :new to :open automatically.

This change also keeps the initial status & assigned user in the
first comment if the task is created with one.

--- a/app/styles/_tasks.sass
+++ b/app/styles/_tasks.sass
@@ -295,7 +295,13 @@ span.task_status, span.current_task_status
   -webkit-border-radius: 4px
   display: inline-block
   line-height: 14px
-
+p.assigned_transition
+  font-size: 13px
+  font-style: italic
+  color: lighten($text, 30%)
+  text-transform: lowercase
+  font-variant: small-caps
+  
 .task.status_new .taskStatus span.task_status, .task_status_new
   background: #9da3a7
   +gradient(#9da3a7,#9da3a7-#333)
