--- a/app/views/teambox_datas/new_export.haml
+++ b/app/views/teambox_datas/new_export.haml
@@ -1,20 +1,11 @@
+- content_for :column do
+  = render 'shared/user_navigation'
+
 %h2= t('.title')
 
 - form_for @data do |f|
   = hidden_field_tag 'teambox_data[type_name]', 'export'
-  %p= t('.description')
-
-  .projects
-    - for organization in current_user.organizations
-      %h3= h(organization.name)
-      - for project in organization.projects
-        %label.project
-          = check_box_tag 'teambox_data[projects_to_export][]', project.id
-          = project.name
-        .clear
-  
-    .clear
-  
+  = fields_for_teambox_export(f, @data)
   .submit
     = f.submit t('.submit')
     = t('common.or')
