--- a/app/views/teambox_datas/new_import.haml
+++ b/app/views/teambox_datas/new_import.haml
@@ -1,11 +1,11 @@
+- content_for :column do
+  = render 'shared/user_navigation'
+
 %h2= t('.title')
 
 - form_for @data, :html => {:multipart => true} do |f|
   = hidden_field_tag 'teambox_data[type_name]', 'import'
-  
-  .file
-    = f.label :asset, t('.select_file')
-    = f.file_field :import_data, :size => 20
+  = fields_for_teambox_import(f, @data)
   .submit
     = f.submit t('.submit')
     = t('common.or')
