--- a/app/views/teambox_datas/show_import.haml
+++ b/app/views/teambox_datas/show_import.haml
@@ -1,28 +1,24 @@
+- content_for :column do
+  = render 'shared/user_navigation'
+
 %h2= t('.title')
 
-- if @data.need_data? and @data.data
-  - form_for @data do |f|
-    %p= t('.please_supply_user_map')
-    %table#map_users
-      %tr
-        %th= t('.user')
-        %th= t('.teambox_user')
-        %th
-      = render :partial => 'user_map', 
-               :collection => @data.user_map.map{|key,value|[key,value]}, 
-               :locals => {:users => @data.users_lookup}
-    .target_project
-      %label= "Put all projects in this organization"
-      = select_tag "teambox_data[target_organization]", options_for_select(options_for_target_organization, @data.target_organization)
-      = errors_for @data, "target_organization"
+- if @data.need_data?
+  - form_for @data, :html => {:multipart => true} do |f|
+    = fields_for_teambox_import(f, @data)
     .submit
       = f.submit t('.submit')
       = t('common.or')
       %a{:href => teambox_data_path(@data), :class => 'cancel', 'data-method' => 'delete'}= t('common.cancel')
 - elsif @data.processed_at
-  %p= t('datas.data.processed_at', :processed_at => @data.processed_at)
-- elsif @data.is_processing
+  %p= t('teambox_datas.data.processed_at', :processed_at => @data.processed_at)
+  %p= t('.projects')
+  %ul
+    - @data.projects.each do |project|
+      %li= link_to h(project.name), project_path(project)
+- elsif @data.processing?
   %p= t('teambox_datas.data.processing')
   %a{:href => teambox_data_path(@data), :class => 'cancel', 'data-method' => 'delete'}= t('common.cancel')
 - else
-  %p= t('.import_error')
+  %p= t('.import_error')	
+  %a{:href => teambox_data_path(@data), :class => 'cancel', 'data-method' => 'delete'}= t('common.cancel')
