Adding a splash screen as an intro to Teambox

--- a/app/styles/_layout.sass
+++ b/app/styles/_layout.sass
@@ -92,3 +92,10 @@ p.flash-notice
     li
       display: inline
       margin-left: 1em
+
+#splash
+  position: absolute
+  top: 10px
+  width: 100%
+  text-align: center
+  background-color: white
