--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -20,7 +20,7 @@
     = load_javascript_user_data
     = archived_project_strip(@current_project)
     = configure_this_organization
-    .container
+    #container.container
       = header
       = navigation(@current_project,current_user.projects,current_user.recent_projects)
       .wrapper
