Nicer styles for search

--- a/app/styles/_search.sass
+++ b/app/styles/_search.sass
@@ -23,21 +23,25 @@
     margin: 10px 0
     padding: 10px 1.2em
     h1
+      font-size: 14px
       margin-top: 0
-    form input[type=search]
+    form input#search_terms
       width: 20em
-      font-size: 1.1em
+      font-size: 1em
+      padding: 2px
   
   h2
-    font-size: 1.1em
+    font-size: 14px
     padding-bottom: 0
     border-bottom: none
+    margin: 1.5em 0 1em 6px
+  p
+    font-size: 12px
     margin: 1em 0 1em 6px
-    color: lighten($text, 30%)
     
   #results
     .result
-      font-size: 14px
+      font-size: 12px
       margin: 5px 0
       span.time
         float: right
