--- a/app/views/search/index.html.haml
+++ b/app/views/search/index.html.haml
@@ -6,36 +6,17 @@
       = t('.title')
 
   - form_tag search_path, :method => 'get' do
-    = text_field_tag :q, @search_terms, :type => 'search', :id => nil
+    = text_field_tag :q, @search_terms, :id => 'search_terms'
     = submit_tag(@comments ? t('.search_again') : t('search.submit'), :name => nil)
 
 - if @results
-  %h2= t('.report', :count => @results.total_entries, :term => h(@search_terms))
-  
-  #results
-    - @results.each do |result|
-      .result
-        - case result
-        - when Conversation
-          .comment_icon
-          = link_to result.project, project_path(result.project)
-          &rarr;
-          - name = result.name || truncate(h(result.comments.try(:first).try(:body)), 80)
-          = link_to name, project_conversation_path(result.project, result)
-          %span.time= time_ago_in_words result.updated_at
-        - when Task
-          .task_icon
-          = link_to result.project, project_path(result.project)
-          &rarr;
-          = link_to result.task_list, project_task_list_path(result.project, result.task_list)
-          &rarr;
-          = link_to result.name, project_task_path(result.project, result)
-          %span.time= time_ago_in_words result.updated_at
-        - when Page
-          .page_icon
-          = link_to result.project, project_path(result.project)
-          &rarr;
-          = link_to result.name, project_page_path(result.project, result)
-          %span.time= time_ago_in_words result.updated_at
 
-  = will_paginate @results
+  - if @results.any?
+    %h2= t('.report', :count => @results.total_entries, :term => h(@search_terms))
+    #results
+      = render :partial => 'search/result', :collection => @results
+    = will_paginate @results
+
+  - else
+    %h2= t('.no_results.title', :term => h(@search_terms))
+    %p= t('.no_results.explain')
