Warning when deleted an organization

--- a/app/styles/_organizations.sass
+++ b/app/styles/_organizations.sass
@@ -113,3 +113,12 @@
       a.active
         font-weight: bold
         color: black
+
+.delete_organizations
+  .danger
+    margin: 20px
+    border: 3px solid #900
+    background-color: #ffe5e5
+    padding: 10px
+    p
+      margin: 10px 0 20px
