--- a/app/views/organizations/projects.haml
+++ b/app/views/organizations/projects.haml
@@ -5,30 +5,7 @@
 
 %p.new_project= link_to t('.new_project'), new_project_path, :class => :add_button
 
-%h3= t('.active_projects')
-.projects
-  - @organization.projects.unarchived.each do |project|
-    - role = @people.detect { |p| p.project_id == project.id }.try(:role)
-    - if role
-      %p.project
-        = link_to h(project), project
-        %span.status
-          = t('.role', :role => @roles[role])
-          - if @roles[role] == 'admin'
-            = "(" + link_to(t('.settings'), edit_project_path(project)) + ")"
-    - elsif @organization.is_admin? current_user
-      %p.project
-        = link_to h(project), project
-        %span.status
-          You're not part of this project
-
-- if @organization.projects.archived.any?
-  %h3= t('.archived_projects')
-  .projects
-    - @organization.projects.archived.each do |project|
-      %p.project
-        = link_to h(project), project
-        %span.status
-          = t('.last_activity', :date => project.updated_at.to_date)
+= render 'active_projects'
+= render 'archived_projects'
 
 = render 'organizations/column'
