New signup form, with better styles and js validations

--- a/app/styles/_icons.sass
+++ b/app/styles/_icons.sass
@@ -39,6 +39,12 @@
   +hoverable_sprite_16px(16px*6, 0px, 16px, 16px)
 .style_icon
   +hoverable_sprite_16px(16px*10, 0px, 16px, 16px)
+.static_tick_icon
+  display: inline-block
+  +sprite_16px(16px*4, 16px, 16px, 16px)
+.static_cross_icon
+  display: inline-block
+  +sprite_16px(16px*0, 16px, 16px, 16px)
 .left_arrow_icon
   +hoverable_sprite_16px(16px*11, -3px, 16px, 16px)
 .loading_icon
