--- a/app/views/users/new.haml
+++ b/app/views/users/new.haml
@@ -12,12 +12,25 @@
     %p= t('.existing_user', :login_url => login_path, :forgot_url => forgot_password_path)
 
   - secure_url = Teambox.config.secure_logins ? users_url(:protocol => 'https') : nil
-
   - form_for @user, :url => secure_url do |f|
     = render 'users/form/new', :f => f, :user => f.object
-    - if Rails.env.development? and Teambox.config.email_confirmation_require
-      %p You are running in development mode. No email confirmation will be required.
-      %p When running Teambox in production mode, signup will require an email confirmation.
-    %br
     .submit
-      = submit_tag t('.submit'), :tabindex => 300
+      .submit_button
+        = submit_tag t('.submit'), :tabindex => 300, :id => 'submit', :class => :button
+
+- if Rails.env.development? and Teambox.config.email_confirmation_require
+  %p
+    You are running in development mode. No email confirmation will be required.
+    %br
+    When running Teambox in production mode, signup will require an email confirmation.
+
+= js_for_signup_form_validations
+
+:javascript
+  // Autodetect browser's timezone
+  var offset = -new Date().getTimezoneOffset() / 60 - 1
+  var local_tz = (offset < 0 ? "-" : "+") + offset.abs().toPaddedString(2)
+  var select = $('user_time_zone')
+  $A(select.options).find(function(option) {
+    return option.text.match(/[+-]\d+/) == local_tz
+  }).selected = true
