Compact empty error fields on signup

--- a/app/styles/_signup.sass
+++ b/app/styles/_signup.sass
@@ -49,6 +49,8 @@ $label_indent: 150px
         padding-left: $label_indent + 30px
       .field_note
         color: #555
+      .errors_for
+        display: block
 
     .check_box
       padding-left: $label_indent - 5px
