--- a/app/views/task_lists/_task_list.html.haml
+++ b/app/views/task_lists/_task_list.html.haml
@@ -2,7 +2,7 @@
 - header_on_index = @on_index || (action_name == 'index')
 - show_the_lists = !(header_on_index && task_list.archived)
 .task_list_container{ :id => task_list_id(nil,project,task_list), :class => (task_list.archived ? 'archived' : nil) }
-  .task_list{ :id => task_list_id(:with_main_tasks,project,task_list), :action_url => project_task_list_path(project,task_list) }
+  .task_list{ :id => task_list_id(:with_main_tasks,project,task_list), :action_url => project_task_list_path(project,task_list), :'data-task-list-id' => task_list.id }
     .head{:id => task_list_id(:header_index,project,task_list) }
       = task_list_index_header(project,task_list)
     - if !header_on_index
