--- a/app/views/tasks/_task.haml
+++ b/app/views/tasks/_task.haml
@@ -2,7 +2,7 @@
 - project ||= task.project
 - task_list ||= task.task_list
 
-%div[task]{ :class => task_classes(task) }
+%div[task]{ :class => task_classes(task), :'data-task-id' => task.id }
   .taskStatus
     = image_tag('drag.png', :class => 'task_drag') if editable and !task.archived?
     = task_status(task, :content)
