Moving the sidebar to the right in User#show, cleaning up banner code

--- a/app/styles/_users.sass
+++ b/app/styles/_users.sass
@@ -131,24 +131,11 @@ $micro_size: 24px
   .column_wrap
     .profile
       margin-bottom: 20px
-  .banner
-    background: #eee
-    margin-top: 10px
-    padding: .3em 10px
-    h2
-      margin: 0
-      padding: 0
-      border: none
-      span.login
-        font-size: 14px
-        padding-top: .2em
-  .content_wrap
-    float: right
-    padding: 10px
-      left: 0px
   .column_wrap
-    float: left
+    h2 span
+      padding: 0
     .avatar
+      max-width: 280px
       -moz-border-radius: 4px
       -webkit-border-radius: 4px
     .biography
@@ -159,13 +146,6 @@ $micro_size: 24px
       padding: 6px
       margin-top: 4px
   .content
-    h2
-      font-size: 22px
-      margin: 10px
-        right: 0px
-      padding:
-        bottom: 5px
-      border-bottom: solid 2px rgb(240, 240, 240)
     .comment
       span.author, span.project_arr
         display: none
