--- a/app/views/emailer/_comment.text.html.haml
+++ b/app/views/emailer/_comment.text.html.haml
@@ -10,6 +10,16 @@
         = h(comment.user.name) + ', '
       %span{ :style => 'color: rgb(150,150,150);' }
         = I18n.l(comment.created_at.in_time_zone(@recipient.time_zone), :format => "%b %d &mdash; %I:%M %p")
+      - if comment.task_comment?
+        %span{ :style => 'margin-left: 10px; color: rgb(150,150,150);' }
+          = comment_task_status(comment)
+      - if comment.task_comment? and comment.assigned_transition?
+        %span{ :style => 'margin-left: 10px; color: rgb(150,150,150);' }
+          - if comment.assigned_id?
+            = t('tasks.assigned.assigned_to', :user => comment.assigned.user.name)
+          - else
+            = t('tasks.assigned.unassigned')
+
       ~ comment.body_html
 
     - if comment.uploads.any?
