Add due date to task comment

--- a/app/styles/_calendar_date_select.sass
+++ b/app/styles/_calendar_date_select.sass
@@ -106,5 +106,17 @@
     img
       margin-right: 2px
 
+.date_picker
+  cursor: pointer
+  i
+    font-style: normal
+    color: #666
+  span
+    font-size: 12px
+    border-bottom: 1px dashed #ccc
+    &:hover
+      color: black
+      border-bottom: 1px solid black
+
 .fieldWithErrors .calendar_date_select
   border: 2px solid red
