--- a/app/styles/_tasks.sass
+++ b/app/styles/_tasks.sass
@@ -328,6 +328,18 @@ p.assigned_transition
     text-decoration: line-through
     color: #999
 
+.assigned_date
+  color: rgb(100,100,100)
+  padding: 0px 5px
+  margin-right: 5px
+  font-size: 11px
+  -moz-border-radius: 4px
+  -webkit-border-radius: 4px
+  background: rgb(245,245,245)
+  border: solid 1px rgb(225,225,225)
+  text-transform: uppercase
+  display: inline-block
+
 p.view_for_all
   font-size: 12px
   margin: 10px 0
