--- a/app/views/search/_result.haml
+++ b/app/views/search/_result.haml
@@ -7,6 +7,12 @@
     - name = result.name || truncate(h(result.comments.try(:first).try(:body)), 80)
     = link_to name, project_conversation_path(result.project, result)
     %span.time= time_ago_in_words result.updated_at
+  - when TaskList
+    .task_icon
+    = link_to result.project, project_path(result.project)
+    &rarr;
+    = link_to result.name, project_task_list_path(result.project, result)
+    %span.time= time_ago_in_words result.updated_at
   - when Task
     .task_icon
     = link_to result.project, project_path(result.project)
