remove html from plain text email and add preview for the missing Emailer methods

--- a/app/views/emailer/forgot_password.text.plain.erb
+++ b/app/views/emailer/forgot_password.text.plain.erb
@@ -3,10 +3,10 @@
 <%= t('emailer.reset_password.hey', :user_name => h(@user.name)) %>
 
 
-<%= t('emailer.reset_password.follow_the_link') %>
+<%= t('emailer.reset_password.follow_this_link', :new_password => t('emailer.reset_password.new_password')) %>
 
 <%= @url %>
 
 
 <%= t('emailer.reset_password.report_abuse', :email => @user.email) %>
-<%= t('emailer.reset_password.problems', :support => APP_CONFIG['support']) %>
+<%= t('emailer.reset_password.problems', :support => Teambox.config.support) %>
