--- a/app/views/emailer/_answer.text.html.haml
+++ b/app/views/emailer/_answer.text.html.haml
@@ -1,5 +1,5 @@
 %p{ :style => email_text(:small) }
-  - if APP_CONFIG['allow_incoming_email']
+  - if Teambox.config.allow_incoming_email
     %span{ :style => 'color: white' }= email_answer_line
     %br
     = t('emailer.common.answer_above_this_line')
