--- a/app/views/emailer/confirm_email.text.html.haml
+++ b/app/views/emailer/confirm_email.text.html.haml
@@ -5,7 +5,7 @@
   %p= t('emailer.confirm.hey', :user_name => h(@user.name))
 
   .box{ :style => email_box }  
-    %p= t('emailer.confirm.follow_the_link')
+    %p= t('emailer.confirm.follow_this_link', :complete => content_tag(:b, t('emailer.confirm.complete')) )
     %h2{ :style => email_text(:big) }
       = link_to t('emailer.confirm.log_in'), @login_link
 
@@ -16,6 +16,6 @@
 
   .footer{ :style => email_text(:small) }
     %p= t('emailer.confirm.report_abuse', :email => @user.email)
-    %p= t('emailer.confirm.problems', :support => APP_CONFIG['support'])
+    %p= t('emailer.confirm.problems', :support => Teambox.config.support)
     
 
