--- a/app/views/emailer/forgot_password.text.html.haml
+++ b/app/views/emailer/forgot_password.text.html.haml
@@ -5,7 +5,7 @@
   %p= t('emailer.reset_password.hey', :user_name => h(@user.name))
 
   .box{ :style => email_box }  
-    %p= t('emailer.reset_password.follow_the_link')
+    %p= t('emailer.reset_password.follow_this_link', :new_password => content_tag(:b, t('emailer.reset_password.new_password')))
     %h2{ :style => email_text(:big) }
       = link_to t('emailer.reset_password.log_in'), @url
 
@@ -16,5 +16,5 @@
 
   .footer{ :style => email_text(:small) }
     %p= t('emailer.reset_password.report_abuse', :email => @user.email)
-    %p= t('emailer.reset_password.problems', :support => APP_CONFIG['support'])
+    %p= t('emailer.reset_password.problems', :support => Teambox.config.support)
 
