--- a/app/views/emailer/notify_task.text.plain.erb
+++ b/app/views/emailer/notify_task.text.plain.erb
@@ -1,9 +1,13 @@
 <%= answer_instructions %>
 
-<%= t('emailer.notify.project') %> <%= link_to(h(@project.name), project_url(@project)) + '. ' %>
-<%= t('emailer.notify.task_list') %> <%= link_to(h(@task_list.name), project_task_list_url(@project, @task_list)) %>
+<%= t('emailer.notify.project') %> <%= h(@project.name) %>
+<%= project_url(@project) %>
 
-<%= t('emailer.notify.task') %> <%= link_to h(@task.name), project_task_url(@project, @task) %>
+<%= t('emailer.notify.task_list') %> <%= h(@task_list.name) %>
+<%= project_task_list_url(@project, @task_list) %>
+
+<%= t('emailer.notify.task') %> <%= h(@task.name) %>
+<%= project_task_url(@project, @task) %>
 
 <%- if @task.assigned %>
 <%= t('emailer.notify.assigned_to', :user => h(@task.assigned.user.name)) %>
@@ -13,12 +17,12 @@
 <%= emailer_list_comments(@task.comments) %>
 
 
-<%= t('emailer.notify.view_online', :link => project_task_url(@project, @task)) %>
+<%= t('emailer.notify.view_this_converation_online', :converation => t('emailer.notify.converation')) %> <%= project_task_url(@project, @task) %>
 <%= emailer_answer_to_this_email %>
 
 <%= @task.watchers.collect {|u| h(u) }.to_sentence %> <%= t('emailer.notify.are_watching') %>
 
 <%= emailer_commands_for_tasks(@recipient) %>
 
-<%= t('emailer.notify.stop_watching', :stop_watching_url => project_task_url(@project, @task)) %>
-<%= t('emailer.notify.notification_settings', :url => account_notifications_url) %>
+<%= t('emailer.notify.stop_watching_link', :stop_watch => t('emailer.notify.stop_watch')) -%> <%= project_task_url(@project, @task) %>
+<%= t('emailer.notify.notification_settings_link', :settings_link => t('emailer.notify.settings_link')) -%> <%= account_notifications_url %>
