--- a/app/views/organizations/_column.haml
+++ b/app/views/organizations/_column.haml
@@ -1,3 +1,3 @@
 - content_for :column do
   - unless @organization.new_record?
-    = organization_navigation(@organization)
+    .organization_navigation= organization_navigation(@organization)
