--- a/app/styles/_shared.sass
+++ b/app/styles/_shared.sass
@@ -1,7 +1,7 @@
 $highlight: #fff9da
 $navbar: #78acd7
-$text: #333
-$typeface: "Lucida Grande", Helvetica, "Helvetica Neue", Arial, Verdana, sans-serif
+$text: #010101
+$typeface: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Helvetica, "Helvetica Neue", Arial, Verdana, sans-serif
 $link: #259bad
 $link_hover: #df5249
 
