Removing some redundant styles

--- a/app/styles/_typography.sass
+++ b/app/styles/_typography.sass
@@ -23,7 +23,6 @@ h2
     bottom: 1em
   padding-bottom: 3px
   font-weight: normal
-  border-bottom: solid 2px rgb(240, 240, 240)
   span
     font-weight: normal
     font-size: 12px
@@ -95,3 +94,11 @@ textarea.placeholder, input.placeholder
       border: 1px solid #dddddd
     th
       font-weight: bold
+
+div.column
+  h2
+    margin-top: 20px
+    span
+      padding: 0
+  p
+    margin: 10px 0
