Adding 'settings' field to Organization Including Metadata module in Organization  - allows storing metadata serialized as json Adding ability to customize colour of various UI elements per Organization (using Metadata)

--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -1,4 +1,4 @@
-<div class="navigation"><%
+<div class="navigation" style="<%= organization_header_bar_colour %>"><%
   render_tabnav :project do
     add_tab({:html => {:id => 'projects_tab',
                        :class => 'nav_tab',
