--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -10,6 +10,7 @@
     = stylesheet_link_tag 'application', :media => :screen
     = #stylesheet_link_tag 'custom', :media => :screen
     = stylesheet_link_tag 'print', :media => :print
+    = organization_link_colour
     = sprockets_include_tag
     = yield :js_includes
     - javascript_tag do
