Adding colorPicker js widget to allow easy selection of organization colours

--- a/app/views/organizations/appearance.haml
+++ b/app/views/organizations/appearance.haml
@@ -1,3 +1,6 @@
+- content_for :stylesheet_includes do
+  = stylesheet_link_tag 'colorpicker', :media => :screen
+
 %h2=h @organization
 
 - if @organization.is_admin? current_user
