Display the name of the project for simple conversations

--- a/app/styles/_comments.sass
+++ b/app/styles/_comments.sass
@@ -146,7 +146,7 @@ div.thread
     .body
       .before
         display: inline
-      a.user
+      a.user, a.project
         text-decoration: none
         font-weight: bold
       .before:first-child+p
