--- a/app/styles/_projects.sass
+++ b/app/styles/_projects.sass
@@ -292,8 +292,8 @@ form#new_project, form.edit_project
       li
         margin-bottom: 3px
 
-.show_projects
-  h2
+.show_projects span.in_project
+  display: none
 
 .show_projects, .index_task_lists
   h2
