--- a/app/views/emailer/notify_task.text.html.haml
+++ b/app/views/emailer/notify_task.text.html.haml
@@ -31,7 +31,7 @@
   .footer{ :style => email_text(:small) }
     %p
       = @task.watchers.collect {|u| h(u) }.to_sentence
-      = t('emailer.notify.are_watching')
+      = t('emailer.notify.are_watching_task', :count => @task.watchers.size)
     = emailer_commands_for_tasks(@recipient)
     %p
       = t('emailer.notify.stop_watching_link', :stop_watch => link_to(t('emailer.notify.stop_watch'), project_task_url(@project, @task), :style => inline_organization_link_colour) )
