--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -33,4 +33,5 @@
             .column#column= content_for_column
       = footer
     = autocomplete_projects_people_data
+    = projects_people_data
     = javascripts
