--- a/app/views/shared/_project_settings_navigation.erb
+++ b/app/views/shared/_project_settings_navigation.erb
@@ -13,6 +13,12 @@ render_tabnav :project do
     #end
 
     add_tab do |t|
+      t.named t('.notification_hooks')
+      t.links_to project_integrations_path
+      t.highlights_on :controller => 'integrations'
+    end
+
+    add_tab do |t|
       t.named t('.deletion')
       t.links_to project_deletion_path :project_id => @current_project.permalink
       t.highlights_on :controller => 'projects', :action => 'edit', :sub_action => 'deletion'
