Show more button not full-width anymore, fixes Firefox <=3.5

--- a/app/styles/_projects.sass
+++ b/app/styles/_projects.sass
@@ -324,7 +324,7 @@ form#new_project, form.edit_project
 #show_more_button
   margin-top: 40px
   width: 620px
+  text-align: center
   .activity_paginate_link
-    width: 100%
     text-align: center
  
