--- a/app/styles/_layout.sass
+++ b/app/styles/_layout.sass
@@ -3,6 +3,9 @@ html, body
   padding: 0px
   background-color: white
 
+body.index_projects, body.show_projects, body.show_users
+  padding-bottom: 300px
+
 div.wrapper
   clear: both
   background: white
