Center the loading spinner when fetching more activities

--- a/app/styles/_projects.sass
+++ b/app/styles/_projects.sass
@@ -327,4 +327,6 @@ form#new_project, form.edit_project
   text-align: center
   .activity_paginate_link
     text-align: center
- 
+
+img#activity_paginate_loading
+  margin-left: 300px
