Rendering threads client side, fetching the API.

--- a/app/styles/_threads.sass
+++ b/app/styles/_threads.sass
@@ -57,6 +57,8 @@
           +rounded(3px)
       .block
         width: 552px
+      .in_project
+        display: none
   form.new_comment
     border-left: 4px solid #eee
     background-color: #fafafa
