selecting the assigned user in assigned dropdown

--- a/app/views/comments/_fields.haml
+++ b/app/views/comments/_fields.haml
@@ -30,7 +30,7 @@
         = task_form.label :status
         = task_form.select :status, task_statuses_for_select
         = task_form.label :assigned_id, t('comments.new.assigned_to')
-        = task_form.select :assigned_id, []
+        = task_form.select :assigned_id, [], {}, :'data-assigned' => task_form.object.assigned_id
         = task_form.label :due_on
         = date_picker(task_form, :due_on)
 
