--- a/app/views/javascripts/environment.erb
+++ b/app/views/javascripts/environment.erb
@@ -26,25 +26,25 @@ _translations = <%= Hash[
   minutes_ago = I18n.t('datetime.time_ago', :time_ago_in_words => minutes)
 %>
 function minutesAgoInWords(minutes) {
-  if(minutes == 0) { return '<%= less_than_one %>'; }
-  if(minutes == 1) { return '<%= one_minute_ago %>'; }
-  return "<%= minutes_ago %>";
+  if(minutes == 0) { return '<%= escape_javascript less_than_one %>'; }
+  if(minutes == 1) { return '<%= escape_javascript one_minute_ago %>'; }
+  return "<%= escape_javascript minutes_ago %>";
 }
 
 /* strftime strings */
-time_format_short = '<%= I18n.t('time.formats.short') %>';
-time_pm = '<%= I18n.t('time.pm') %>';
-time_am = '<%= I18n.t('time.am') %>';
+time_format_short = '<%= escape_javascript I18n.t('time.formats.short') %>';
+time_pm = '<%= escape_javascript I18n.t('time.pm') %>';
+time_am = '<%= escape_javascript I18n.t('time.am') %>';
 
-date_format_short = '<%= I18n.t('date.formats.short')%>';
-date_format_long = '<%= I18n.t('date.formats.long')%>';
-date_abbr_day_names = $w("<%= I18n.t('date.abbr_day_names').join(" ") %>");
-date_day_names = $w("<%= I18n.t('date.day_names').join(" ") %>");
-date_abbr_month_names = $w("<%= I18n.t('date.abbr_month_names').join(" ") %>");
-date_month_names = $w("<%= I18n.t('date.month_names').join(" ") %>");
-date_yesterday = '<%= I18n.t 'date.yesterday' %> ';
+date_format_short = '<%= escape_javascript I18n.t('date.formats.short')%>';
+date_format_long = '<%= escape_javascript I18n.t('date.formats.long')%>';
+date_abbr_day_names = $w("<%= escape_javascript I18n.t('date.abbr_day_names').join(" ") %>");
+date_day_names = $w("<%= escape_javascript I18n.t('date.day_names').join(" ") %>");
+date_abbr_month_names = $w("<%= escape_javascript I18n.t('date.abbr_month_names').join(" ") %>");
+date_month_names = $w("<%= escape_javascript I18n.t('date.month_names').join(" ") %>");
+date_yesterday = '<%= escape_javascript I18n.t('date.yesterday') %> ';
 
-task_unassigned = '<%= I18n.t 'comments.new.assigned_to_nobody' %>'
+task_unassigned = '<%= escape_javascript I18n.t('comments.new.assigned_to_nobody') %>'
 
 document.on("dom:loaded", function() {
   format_posted_date();
