Add preview to all markdown textarea.

--- a/app/views/comments/_fields.haml
+++ b/app/views/comments/_fields.haml
@@ -36,5 +36,5 @@
 
   .submit
     %span.help= formatting_documentation_link
-    %button.preview{ :data => {:alternate => t('comments.preview.close')} }= t('comments.preview.preview')
+    = preview_button
     = f.submit t('comments.new.submit'), :'data-disable-with' => t('comments.new.sending')
