First pass at google docs functionality. This adds the ability to attach a document to a comment. Authorization is currently not done through OmniAuth and access tokens last only for a session

--- a/app/views/comments/_comment.haml
+++ b/app/views/comments/_comment.haml
@@ -52,4 +52,9 @@
         - else
           .upload_list
             = list_uploads_inline(comment.uploads)
+      
+      - if comment.google_docs.any?
+        %ul.google_docs_list
+          = render :partial => 'google_docs/file', :collection => comment.google_docs, :as => :google_doc
+          
     .clear
