Add pages to Project#show sidebar

--- a/app/styles/_projects.sass
+++ b/app/styles/_projects.sass
@@ -67,9 +67,13 @@
     .project_link
       margin: 10px 5px
 
-  .recent_conversations
+  .recent_conversations, .project_pages
     a.conversation
       background: url(/images/comment.gif) no-repeat left
+      margin-left: 10px
+      padding-left: 25px
+    a.page
+      background: url(/images/page.png) no-repeat left
       margin-left: 10px
       padding-left: 25px
     a
