--- a/app/views/projects/show.haml
+++ b/app/views/projects/show.haml
@@ -19,6 +19,7 @@
 
 - content_for :column do
   = render 'recent_conversations', :project => @current_project, :conversations => @recent_conversations
+  = render 'pages', :project => @current_project, :pages => @current_project.pages
 
   = render 'people_list', :project => @current_project, :compact => false
   - if @current_project.users.size > 1
