Structuring the JS API client

--- a/app/views/javascripts/activities/_comment.erb
+++ b/app/views/javascripts/activities/_comment.erb
@@ -22,6 +22,7 @@
           <a href="/users/{{username}}" class="user">{{first_name}} {{last_name}}</a>
         {{/user}}
         {{{status_transition}}}
+        {{{date_transition}}}
         {{#project}}
           <span class="in_project">
             in 
